<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint_Search">Enter search query</string>
    <string name="button_Save">Save</string>
    <string name="Search">Search</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_setting">Setting</string>
    <string name="lable_news_date">News desk values</string>
    <string name="lable_sort_type">Sort Order</string>
    <string name="lable_begin_date">Begin date</string>
    <string name="lable_end_date">End date</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_fashion_and_style">Fashion And Style</string>
    <string name="test_text_view">Text View</string>
    <string name="share">Share</string>
</resources>
