<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pmt.nytimessearch.SettingActivity"
    tools:showIn="@layout/activity_setting">
    <TextView
        android:layout_width="@dimen/lable_width"
        android:layout_height="@dimen/design_fab_size_normal"
        android:text="@string/lable_begin_date"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/design_fab_size_normal"
        android:id="@+id/etBeginDate"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/spSortType"
        android:layout_alignStart="@+id/spSortType"
        android:layout_alignRight="@+id/etEndDate"
        android:layout_alignEnd="@+id/etEndDate" />
    <TextView
        android:layout_width="@dimen/lable_width"
        android:layout_height="@dimen/design_fab_size_normal"
        android:text="@string/lable_end_date"
        android:id="@+id/textView4"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/design_fab_size_normal"
        android:id="@+id/etEndDate"
        android:layout_below="@+id/etBeginDate"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/spSortType"
        android:layout_alignStart="@+id/spSortType"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/design_fab_size_normal"
        android:text="@string/lable_sort_type"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="@dimen/design_fab_size_normal"
        android:id="@+id/spSortType"
        android:layout_below="@+id/etEndDate"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        >

    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/design_fab_size_normal"
        android:text="@string/lable_news_date"
        android:id="@+id/textView"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/btnSave"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/spSortType"
        android:layout_alignStart="@+id/spSortType">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_arts"
            android:id="@+id/cbArts"
            android:checked="false" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_fashion_and_style"
            android:id="@+id/cbFashionAndStyle"
            android:checked="false" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_sports"
            android:id="@+id/cbSports"
            android:checked="false" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Save"
        android:id="@+id/btnSave"
        android:layout_marginBottom="@dimen/thumbnail_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
